--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.cca6286pro.reactlibrary.brightness">
-
+        xmlns:tools="http://schemas.android.com/tools"
+        package="com.cca6286pro.reactlibrary.brightness">
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" tools:ignore="ProtectedPermissions" />
 </manifest>
