--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-native-brightness",
   "title": "React Native Brightness",
-  "version": "1.0.1",
-  "description": "TODO",
+  "version": "1.0.2",
+  "description": "React Native bridge controls device screen brightness",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +13,8 @@
     "baseUrl": "https://github.com/cca6286pro/react-native-brightness"
   },
   "keywords": [
-    "react-native"
+    "react-native",
+    "brightness"
   ],
   "author": {
     "name": "cca6286pro",
